add portfolio.html file

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     background: rgb(0, 141, 160);
-    color: rgb(10, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 10px;
-    font-family: arial;
+    font-family: verdana;
 }
 #all-contents {
   max-width: 800px;
@@ -11,7 +11,7 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(197, 109, 109);
+    background: rgb(248, 147, 88);
    margin: 0 auto;
    margin-bottom: 20px;
     display: flex;
@@ -20,7 +20,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: rgb(32, 3, 11);
+    color: rgb(26, 4, 4);
     flex: 1;
     margin: 0;
 }
@@ -38,7 +38,7 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(3, 153, 103);
+    background: rgb(245, 77, 119);
     display: flex;
 }
 .sidebar {
@@ -46,7 +46,7 @@ main {
     padding: 10px;
 }
 .sidebar-img {
-    width: 200px;
+    width: 600px;
 }
 .content {
     flex: 1;
@@ -55,9 +55,35 @@ main {
 
 /* portfolio styles */
 #interests {
-    border: 4px rgb(46, 112, 199) ridge;
+    border: 12px rgb(46, 112, 199) ridge;
     padding: 8px;
 }
 h2, h3 {
     margin: 0px;
+}
+
+  /* portfolio styles */
+  .content h1 {
+    color: black;
+}
+
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545;
 }
